# jira-gate

./: .gitignore  .jira-gate.config.template  CLAUDE.md  README.md  pyproject.toml  requirements.txt
jira_gate/: __init__.py  cli.py  config.py
tests/: __init__.py
