[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jira-gate"
version = "0.1.0"
description = "A CLI tool to interact with JIRA API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "jira>=3.5.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
jira-gate = "jira_gate.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["jira_gate*"]
